--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,30 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
+.body-div{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	background-color: #f5f5f5;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card {
+	height: 50%;
+	width: 40%;
+	margin-left: 15px;
 }
-
-.App-link {
-  color: #09d3ac;
+.card-div{
+	display: inline-flex;
+	margin: auto;
+	height: 100%;
+	padding-top: 10%;
+	width: 100%;
+}
+.image-area {
+	height: 100%;
+	text-align: center !important;
+}
+.card-img{
+	max-width:100%;
+	max-height:100%;
 }
